--- a/EngineQ/EngineQDemonstration/EngineQDemonstration.vcxproj
+++ b/EngineQ/EngineQDemonstration/EngineQDemonstration.vcxproj
@@ -113,6 +113,7 @@
       <Command>echo --------------------   Copying files   --------------------
 
 xcopy "$(SolutionDir)Libraries\Mono\bin\$(Platform)\*" "$(OutputPath)" /D /Y
+xcopy "$(SolutionDir)Libraries\Assimp\bin\$(Platform)\*" "$(OutputPath)" /D /Y
 xcopy "$(SolutionDir)EngineQScripting\bin\$(Configuration)\EngineQ.dll" "$(OutputPath)" /D /Y
 
 xcopy "$(SolutionDir)Libraries\Mono\config" "$(OutputPath)config\" /E /Y /D
@@ -149,6 +150,7 @@ xcopy "$(SolutionDir)EngineQDemonstrationScripts\bin\$(Configuration)\QScripts.d
       <Command>echo --------------------   Copying files   --------------------
 
 xcopy "$(SolutionDir)Libraries\Mono\bin\$(Platform)\*" "$(OutputPath)" /D /Y
+xcopy "$(SolutionDir)Libraries\Assimp\bin\$(Platform)\*" "$(OutputPath)" /D /Y
 xcopy "$(SolutionDir)EngineQScripting\bin\$(Configuration)\EngineQ.dll" "$(OutputPath)" /D /Y
 
 xcopy "$(SolutionDir)Libraries\Mono\config" "$(OutputPath)config\" /E /Y /D
@@ -189,6 +191,7 @@ xcopy "$(SolutionDir)EngineQDemonstrationScripts\bin\$(Configuration)\QScripts.d
       <Command>echo --------------------   Copying files   --------------------
 
 xcopy "$(SolutionDir)Libraries\Mono\bin\$(Platform)\*" "$(OutputPath)" /D /Y
+xcopy "$(SolutionDir)Libraries\Assimp\bin\$(Platform)\*" "$(OutputPath)" /D /Y
 xcopy "$(SolutionDir)EngineQScripting\bin\$(Configuration)\EngineQ.dll" "$(OutputPath)" /D /Y
 
 xcopy "$(SolutionDir)Libraries\Mono\config" "$(OutputPath)config\" /E /Y /D
@@ -229,6 +232,7 @@ xcopy "$(SolutionDir)EngineQDemonstrationScripts\bin\$(Configuration)\QScripts.d
       <Command>echo --------------------   Copying files   --------------------
 
 xcopy "$(SolutionDir)Libraries\Mono\bin\$(Platform)\*" "$(OutputPath)" /D /Y
+xcopy "$(SolutionDir)Libraries\Assimp\bin\$(Platform)\*" "$(OutputPath)" /D /Y
 xcopy "$(SolutionDir)EngineQScripting\bin\$(Configuration)\EngineQ.dll" "$(OutputPath)" /D /Y
 
 xcopy "$(SolutionDir)Libraries\Mono\config" "$(OutputPath)config\" /E /Y /D
